tests/errors/externEnumRet.milo
// @error: cannot cross the C ABI
enum Color {
    Red,
    Green,
    Blue,
}

extern fn currentColor(): Color

fn main(): i32 {
    return 0
}
